--- a/templates/item.html
+++ b/templates/item.html
@@ -16,18 +16,24 @@
     </tr>
   </thead>
   <tbody>
-  {% set counter = 1 %}
   {% for item in items %}
     <tr>
-      <th scope="row">{{ counter }}</th>
+      <th scope="row">{{ loop.index }}</th>
       <td>{{  item['title']  }}</td>
       <td>{{ item['unit'] }}</td>
       <td>{{ item['amount'] }}</td>
     </tr>
-      {% set counter = counter + 1 %}
   {% endfor %}
   </tbody>
 </table>
+    {% if status == 'Not issued' %}
+    <form method="post" action="{{ url_for('issuedInvoice', invoiceId=invoiceIdRequest) }}" target="_blank">
+   <button class="btn btn-danger">Выдать накладную</button>
+  </form>
+    {% endif %}
+    <a href={{ url_for('createItem', invoiceIdRequest=invoiceIdRequest) }}>
 <h4>Добавить товар в текущую накладную</h4>
+    </a>
+{{ status }}
 </body>
 </html>
